--- a/public/send.html
+++ b/public/send.html
@@ -4,15 +4,32 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Send Notification</title>
+        <style>
+            .form-group {
+                margin-bottom: 16px;
+            }
+            .form-group label {
+                display: block;
+            }
+        </style>
     </head>
     <body>
         <h1>Send Push Notification</h1>
         <form id="notificationForm">
-            <label for="title">Notification Title:</label>
-            <input type="text" id="title" name="title" required /><br /><br />
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea
-            ><br /><br />
+            <div class="form-group">
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" required />
+            </div>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <input type="text" id="message" name="message" required />
+            </div>
+
+            <div class="form-group">
+                <label for="taskId">Task ID:</label>
+                <input type="text" id="taskId" name="taskId" required />
+            </div>
+
             <button type="submit">Send Notification</button>
         </form>
         <div id="result"></div>
