docs: update README with Capacitor and deployment info

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,12 @@
         <button onclick="subscribeToNotifications()">
             Subscribe to Notifications
         </button>
+        <button onclick="unsubscribeFromNotifications()">
+            Unsubscribe from Notifications
+        </button>
         <br /><br />
         <a href="/send">Go to Send Notification Page</a>
+        <script src="config.js"></script>
         <script src="client.js"></script>
     </body>
 </html>
