--- a/public/send.html
+++ b/public/send.html
@@ -33,6 +33,7 @@
             <button type="submit">Send Notification</button>
         </form>
         <div id="result"></div>
+        <script src="config.js"></script>
         <script src="/send.js"></script>
     </body>
 </html>
