separate fe and be, allow remote pwa live update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,8 +15,7 @@
             Unsubscribe from Notifications
         </button>
         <br /><br />
-        <a href="/send">Go to Send Notification Page</a>
-        <script src="config.js"></script>
-        <script src="client.js"></script>
+        <a href="/send.html">Go to Send Notification Page</a>
+        <script type="module" src="/client.js"></script>
     </body>
 </html>
