--- a/frontend/send.html
+++ b/frontend/send.html
@@ -33,7 +33,6 @@
             <button type="submit">Send Notification</button>
         </form>
         <div id="result"></div>
-        <script src="config.js"></script>
-        <script src="/send.js"></script>
+        <script type="module" src="/send.js"></script>
     </body>
 </html>
